--- a/Practica1/CMakeLists.txt
+++ b/Practica1/CMakeLists.txt
@@ -3,13 +3,11 @@ cmake_minimum_required(VERSION 3.10)
 project(Practica1)
 
 add_executable(
-Practica1_exec
-main.cpp
-sistemaEcuaciones.cpp
+    Practica1_exec
+    main.cpp
+    sistemaEcuaciones.cpp
+    algoritmos.cpp
+    auxiliares.cpp
+    medio_nivel.cpp
+    tiempos.cpp
 )
-
-#algoritmos.cpp
-#auxiliares.cpp
-#matematicas.cpp
-#medio_nivel.cpp
-#tiempos.cpp 
